--- a/www/static/style/skin/metro/app_setting.css
+++ b/www/static/style/skin/metro/app_setting.css
@@ -501,7 +501,7 @@ body { -khtml-user-select: text; -webkit-user-select: text; -moz-user-select: te
     text-align: center;
     font-weight: 400;
     padding: 4px 22px;
-    background: #5db2ff;
+    background: #5579ba;
     color: #fff;
     flex-shrink: 0;
 }
