--- a/www/template/common/footer.html
+++ b/www/template/common/footer.html
@@ -1,9 +1,12 @@
 ﻿
 <div class="common_footer">
-	<div><?php echo $L['current_user'].': '.$_SESSION['secros_user']['name'];?></div>
-	<div><?php echo $L['system_model'].': '.$config['system_info']['MODEL'];?></div>
-	<div><?php echo $L['system_uptime'].': '.$config['system_info']['UPTIME'];?></div>
-	<?php if (xmodel_v != 1 && $_SESSION['secros_user']['name'] !== 'audit') {?>
-		<div  id="noc_status"><?php echo $L['setting_platform'].': '.$L['no_connect'];?></div>
+	<div style="margin-left: 5%;"><?php echo $L['current_user'].': '.$_SESSION['secros_user']['name'];?></div>
+	<div style="margin-left: 5%;">|</div>
+	<div style="margin-left: 5%;"><?php echo $L['system_model'].': '.$config['system_info']['MODEL'];?></div>
+	<div style="margin-left: 5%;">|</div>
+	<div style="margin-left: 5%;"><?php echo $L['system_uptime'].': '.$config['system_info']['UPTIME'];?></div>
+	<div style="margin-left: 5%;">|</div>
+	<?php if (xmodel_v != 1 &&  xmodel_v != 5 && $_SESSION['secros_user']['name'] !== 'audit') {?>
+		<div style="margin-left: 5%;" id="noc_status"><?php echo $L['setting_platform'].': '.$L['no_connect'];?></div>
 	<?php }?>
-</div> 
+</div>
