--- a/www/static/style/skin/metro/blue_app_log.css
+++ b/www/static/style/skin/metro/blue_app_log.css
@@ -9,8 +9,8 @@
 .dragMaskView { position: absolute; top: 0; left: 0; right: 0; bottom: 0; z-index: 888; background: #fff; opacity: 0.01; filter: alpha(opacity=1); -khtml-user-select: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; -o-user-select: none; user-select: none;}
 input,button,select,textarea { line-height: initial;}
 a { text-decoration: none;}
-body { font-size: 13px; padding: 0px; margin: 0px; font-family: 'Helvetica Neue', "Microsoft Yahei", "微软雅黑", "STXihei", "WenQuanYi Micro Hei", sans-serif; -khtml-user-select: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; -o-user-select: none; user-select: none;}
-textarea,input,button,pre { font-family: 'Helvetica Neue', "Microsoft Yahei", "微软雅黑", "STXihei", "WenQuanYi Micro Hei", sans-serif; -khtml-user-select: text; -webkit-user-select: text; -moz-user-select: text; -ms-user-select: text; -o-user-select: text; user-select: text;}
+body { font-size: 13px; padding: 0px; margin: 0px; font-family: 'Helvetica Neue', "Microsoft Yahei", "寰蒋闆呴粦", "STXihei", "WenQuanYi Micro Hei", sans-serif; -khtml-user-select: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; -o-user-select: none; user-select: none;}
+textarea,input,button,pre { font-family: 'Helvetica Neue', "Microsoft Yahei", "寰蒋闆呴粦", "STXihei", "WenQuanYi Micro Hei", sans-serif; -khtml-user-select: text; -webkit-user-select: text; -moz-user-select: text; -ms-user-select: text; -o-user-select: text; user-select: text;}
 .content_box .ace_cjk { width: 1em !important;}
 .content_box .ace_static_highlight { font-size: 13px;}
 *,*:before,*:after { -webkit-box-sizing: inherit; -moz-box-sizing: inherit; box-sizing: inherit;}
@@ -21,7 +21,7 @@ pre { border: none; border-radius: 0;}
 .btn-default:active,.btn-default.active { border-color: #ADADAD; color: #888;}
 .dropdown-menu:after { content: ''; display: inline-block; border-left: 6px solid rgba(0,0,0,0); border-right: 6px solid rgba(0,0,0,0); border-bottom: 6px solid #FFF; position: absolute; top: -6px; right: 10px;}
 .dropdown-menu:before { content: ''; left: auto; right: 12px; display: inline-block; position: absolute; border-left: 7px solid rgba(0,0,0,0); border-right: 7px solid rgba(0,0,0,0); top: -7px; border-bottom: 7px solid #CCC; border-bottom-color: rgba(0,0,0,0.2); right: 9px;}
-h1,h2,h3,h4,h5,.h1,.h2,.h3,.h4,.h5 { font-family: 'Helvetica Neue', "Microsoft Yahei", "微软雅黑", "STXihei", "WenQuanYi Micro Hei", sans-serif;}
+h1,h2,h3,h4,h5,.h1,.h2,.h3,.h4,.h5 { font-family: 'Helvetica Neue', "Microsoft Yahei", "寰蒋闆呴粦", "STXihei", "WenQuanYi Micro Hei", sans-serif;}
 .pl-5 { padding-left: 5px;}
 .pr-5 { padding-right: 5px;}
 .pl-10 { padding-left: 10px;}
@@ -103,7 +103,7 @@ input[type="radio"],input[type="checkbox"] { border: none; background: none;}
 .init_loading { position: fixed; left: 45%; top: 40%; font-size: 15px; z-index: 999999; width: auto;}
 .init_loading div { padding: 20px; background: #000; opacity: 0.6; filter: alpha(opacity=60); margin: 0 auto; color: #FFF; border-radius: 6px; text-align: center; line-height: 30px;}
 .init_loading img { border-radius: 30px;}
-.appbox { font-size: 13px; font-family: "微软雅黑"; overflow: hidden;}
+.appbox { font-size: 13px; font-family: "寰蒋闆呴粦"; overflow: hidden;}
 .appbox .appline { width: 100%; margin-bottom: 5px; line-height: 25px; overflow: hidden;}
 .appbox .appline .left { float: left; width: 80px;}
 .appbox .appline .right { float: left;}
@@ -362,7 +362,7 @@ body { -khtml-user-select: text; -webkit-user-select: text; -moz-user-select: te
 #body input:focus { border-color: #75A1F0 !important; outline: none; box-shadow: 0 0 12px #75A1F0; -webkit-transition: all 0.218s; -moz-transition: all 0.218s; -o-transition: all 0.218s; -ms-transition: all 0.218s; transition: all 0.218s;}
 #body .font-icon { padding-right: 0.8em; display: inline-block;}
 #body .menu_left { min-width: 170px; position: fixed; z-index: 999; left: 0; height: 100%; width: 20%; background: #028b8a;}
-#body .menu_left h1 { color: #fff; font-weight: 400; padding: 15px 20px 20px 40px; font-size: 30px; margin: 0; font-family: 'Helvetica Neue', "Microsoft Yahei", "微软雅黑", "STXihei", "WenQuanYi Micro Hei", sans-serif;}
+#body .menu_left h1 { color: #fff; font-weight: 400; padding: 15px 20px 20px 40px; font-size: 30px; margin: 0; font-family: 'Helvetica Neue', "Microsoft Yahei", "寰蒋闆呴粦", "STXihei", "WenQuanYi Micro Hei", sans-serif;}
 #body .menu_left .setting li { line-height: 2.5em; color: #fff; font-size: 15px; box-sizing: border-box; text-indent: 10px; display: block; cursor: pointer; outline: none; -webkit-transition: padding 0.2s; -moz-transition: padding 0.2s; -o-transition: padding 0.2s; -ms-transition: padding 0.2s; transition: padding 0.2s; border-left: 4px solid #028b8a;}
 #body .menu_left .setting li.hover { background: #03bdbc; border-left: 4px solid #03bdbc;}
 #body .menu_left .setting li.selected { background: #03b3b2; border-left: 4px solid #fff; padding-left: 20px;}
@@ -417,7 +417,7 @@ body { -khtml-user-select: text; -webkit-user-select: text; -moz-user-select: te
 #body .main .nav a:hover,#body .main .nav a.this { background: #349fff; color: #444; border: 1px solid #349fff; border-left-color: #ddd; color: #fff;}
 #body .main .member input { display: inline-block; width: 45px; margin-left: 2px;}
 #body .main .member span { padding-left: 10px;}
-#body .main .member select { padding: 3px 5px; font-family: "微软雅黑"; color: #666;}
+#body .main .member select { padding: 3px 5px; font-family: "寰蒋闆呴粦"; color: #666;}
 #body .main .member .info { background: #efe; padding: 6px 10px; color: #8a8; border: #ccc 1px dotted; margin-top: 10px;}
 #body .main .member .edit_role { color: #03b3b2;}
 #body .main .member .edit_role:hover { border-bottom: 1px solid #03b3b2;}
@@ -426,7 +426,7 @@ body { -khtml-user-select: text; -webkit-user-select: text; -moz-user-select: te
 #body .main .together .title i { padding-left: 5px; font-style: normal;}
 #body .main .together span.text { color: #bbb; font-size: 12px; padding-left: 10px;}
 #body .main .together.input input { width: 40%; margin-left: 5px;}
-#body .main .together select { padding: 3px 5px; font-family: "微软雅黑"; color: #666;}
+#body .main .together select { padding: 3px 5px; font-family: "寰蒋闆呴粦"; color: #666;}
 #body .main .group_editor a.revert { float: right; margin: 10px; padding: 4px 2em; border: 1px solid #ddd; background: #eee;}
 #body .main .group_editor a.revert:hover { background: #ddd; border-color: #bbb;}
 #body .main .group_editor .tag { height: 25px; line-height: 27px; margin: 2px 4px; padding: 0px 8px; text-decoration: none; color: #666; -webkit-transition: all 0.218s; -moz-transition: all 0.218s; -o-transition: all 0.218s; -ms-transition: all 0.218s; transition: all 0.218s; display: block; float: left; color: #668; border: 1px solid #85fdfc; background: #fff;}
@@ -495,9 +495,9 @@ body { -khtml-user-select: text; -webkit-user-select: text; -moz-user-select: te
 #body table tr td.action a { margin-right: 5px;}
 #body a.add { display: block; text-align: center; text-decoration: none; background: #f6f6f6; line-height: 2em; height: 2em; border: 1px solid #ccc; color: #555;}
 #body a.add:hover { background: #eee;}
-#body a.button { text-decoration: none; cursor: pointer; font-size: 13px; margin: 5px 10px 5px 0; border: none; display: inline-block; border: 1px solid #ddd; text-shadow: none; box-shadow: none; text-align: center; font-weight: 400; padding: 1px 8px; background: #03b3b2; color: #fff; -webkit-transition: all 0.2s; -moz-transition: all 0.2s; -o-transition: all 0.2s; -ms-transition: all 0.2s; transition: all 0.2s;}
-#body a.button:hover { background: #026867;}
-#body a.button:active { background: #001d1c; color: #fff;}
+#body a.button { text-decoration: none; cursor: pointer; font-size: 13px; margin: 5px 10px 5px 0; border: none; display: inline-block; border: 1px solid #ddd; text-shadow: none; box-shadow: none; text-align: center; font-weight: 400; padding: 1px 8px; background: #5db2ff; color: #fff; -webkit-transition: all 0.2s; -moz-transition: all 0.2s; -o-transition: all 0.2s; -ms-transition: all 0.2s; transition: all 0.2s;}
+#body a.button:hover { background: #108eff;}
+#body a.button:active { background: #0066c3; color: #fff;}
 #body a.create_app { margin: 0; display: block; position: absolute; right: 21px;}
 #body .app_menu_left { min-width: 130px; width: 130px;}
 #body .app_menu_left .setting li.selected { padding-left: 12px;}
