--- a/www/static/style/skin/metro/grey_app_log.css
+++ b/www/static/style/skin/metro/grey_app_log.css
@@ -366,7 +366,7 @@ body { -khtml-user-select: text; -webkit-user-select: text; -moz-user-select: te
 #body .menu_left .setting li { line-height: 2.5em; color: #fff; font-size: 15px; box-sizing: border-box; text-indent: 10px; display: block; cursor: pointer; outline: none; -webkit-transition: padding 0.2s; -moz-transition: padding 0.2s; -o-transition: padding 0.2s; -ms-transition: padding 0.2s; transition: padding 0.2s; border-left: 4px solid #303030;}
 #body .menu_left .setting li.hover { background: #494949; border-left: 4px solid #494949;}
 #body .menu_left .setting li.selected { background: #444444; border-left: 4px solid #fff; padding-left: 20px;}
-#body .main { position: absolute; left: 20%; width: 80%; margin: 30px 0 0 20px; overflow-x: hidden;}
+#body .main { position: absolute; width: 100%; margin: 30px 0 0 20px; overflow-x: hidden;}
 #body .main .h1 .font-icon { padding-right: 16px;}
 #body .main div.h1 { font-weight: 400; color: #494949; padding: 0px 0 10px 10px; font-size: 26px;}
 #body .main .section { padding-bottom: 10px; border-top: 1px solid #ddd; padding-top: 10px; color: #666;}
@@ -379,8 +379,18 @@ body { -khtml-user-select: text; -webkit-user-select: text; -moz-user-select: te
 #body .main .section .box input { display: block; width: 250px; font-weight: 800; color: #446;}
 #body .main .section h3 { font-size: 14px; font-weight: bold; width: 140px; float: left;}
 #body .main .section label { display: block;}
+#body .main .section .tools .tools-left label { display: inline;}
 #body .main .savebox { border-top: 1px solid #ddd; margin-bottom: 10px;}
 #body .main .savebox a.save { margin-top: 10px; padding: 5px 20px;}
+#body .main .tools { z-index: 100; height: 34px; min-width: 505px; border-bottom: 1px solid #ddd; background: #f6f6f6; -webkit-box-shadow: 1px 2px 15px #eee; -moz-box-shadow: 1px 2px 15px #eee; box-shadow: 1px 2px 15px #eee;}
+#body .main .tools a.left:hover,.frame-main .frame-right .frame-right-main .tools a.middle:hover { margin-right: 2px; padding-right: 8px;}
+#body .main .tools button.btn { background: url("../../../images/buttons_40.png") 0 0px repeat-x; color: #444;}
+#body .main .tools a.this { background: #eee; cursor: default;}
+#body .main .tools a.this:hover { margin-right: 0px; padding-right: 10px; border: 1px solid #ddd; background: #eee; -webkit-box-shadow: 0 2px 8px rgba(0,0,0,0.05); -moz-box-shadow: 0 2px 8px rgba(0,0,0,0.05); box-shadow: 0 2px 8px rgba(0,0,0,0.05); -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px;}
+#body .main .tools .tools-right { float: right; margin: 4px 0 0 10px;}
+#body .main .tools .tools-right .font-icon { padding-right: 5px;}
+#body .main .tools .tools-right span.msg { display: none; margin-left: 20px; padding-left: 30px; font-size: 14px; color: #888; background: url("../../../images/loading.gif") 0 3px no-repeat;}
+#body .main .tools .tools-left { float: left; margin: 4px 20px 0 0;}
 #body .main .list { float: left; width: 120px; background: #fff; margin-right: 15px; height: 92px; border: 1px solid #ddd; margin-bottom: 10px; cursor: pointer;}
 #body .main .list .ico { width: 100px; height: 65px; margin: 10px; background-color: #fff; box-shadow: 0 1px 15px rgba(0,0,0,0.2);}
 #body .main .list .theme { margin: 5px 10px;}
@@ -416,6 +426,7 @@ body { -khtml-user-select: text; -webkit-user-select: text; -moz-user-select: te
 #body .main .together .title i { padding-left: 5px; font-style: normal;}
 #body .main .together span.text { color: #bbb; font-size: 12px; padding-left: 10px;}
 #body .main .together.input input { width: 40%; margin-left: 5px;}
+#body .main .together select { padding: 3px 5px; font-family: "微软雅黑"; color: #666;}
 #body .main .group_editor a.revert { float: right; margin: 10px; padding: 4px 2em; border: 1px solid #ddd; background: #eee;}
 #body .main .group_editor a.revert:hover { background: #ddd; border-color: #bbb;}
 #body .main .group_editor .tag { height: 25px; line-height: 27px; margin: 2px 4px; padding: 0px 8px; text-decoration: none; color: #666; -webkit-transition: all 0.218s; -moz-transition: all 0.218s; -o-transition: all 0.218s; -ms-transition: all 0.218s; transition: all 0.218s; display: block; float: left; color: #668; border: 1px solid #aaaaaa; background: #fff;}
@@ -475,9 +486,9 @@ body { -khtml-user-select: text; -webkit-user-select: text; -moz-user-select: te
 #body table tr { border-bottom: 1px solid #ddd; background: #fcfcfc; height: 30px;}
 #body table tr input[type='text'] { display: block; width: 80%; color: #888;}
 #body table tr.title { background: #eee; color: #224;}
-#body table tr.title td { border-bottom: 1px solid #ddd; font-weight: 800;}
+#body table tr.title td { border-bottom: 1px solid #ddd; font-weight: 800;  text-align: center;}
 #body table tr.title span { color: #999; font-size: 13px; padding-left: 4px; font-weight: 400;}
-#body table tr td { border-bottom: 1px solid #eee; line-height: 2.5em; height: 2.5em; padding-left: 3%;}
+#body table tr td { border-bottom: 1px solid #eee; line-height: 2.5em; height: 2.5em; padding-left: 0%;  text-align: center;word-break: break-all;}
 #body table tr td.name { width: 30%;}
 #body table tr td.name,#body table tr td.path { border-right: 1px solid #ddd;}
 #body table tr td.action { line-height: 1.3em;}
@@ -490,36 +501,3 @@ body { -khtml-user-select: text; -webkit-user-select: text; -moz-user-select: te
 #body a.create_app { margin: 0; display: block; position: absolute; right: 21px;}
 #body .app_menu_left { min-width: 130px; width: 130px;}
 #body .app_menu_left .setting li.selected { padding-left: 12px;}
-.upload_file_btn{
-    text-decoration: none;
-    cursor: pointer;
-    font-size: 16px;
-    display: inline-block;
-    border: 1px solid #ddd;
-    text-shadow: none;
-    box-shadow: none;
-    text-align: center;
-    font-weight: 400;
-    padding: 4px 22px;
-    background: #444444;
-    color: #fff;
-    flex-shrink: 0;
-}
-
-.select_file_name{
-height: 99%;
-width: 240px;
-box-shadow: inset 0 0 1px #000;
-display: flex;
-align-items: center;
-}
-.btn_no_drop{
-    background: #ccc!important;
-    cursor: no-drop!important;
-}
-.platform .box_line{
-    border:none!important;
-}
-.platform  .box_line input[type='text']{
-    width: 180px!important;
-}
