--- a/www/static/style/skin/metro/orange_app_setting.css
+++ b/www/static/style/skin/metro/orange_app_setting.css
@@ -490,3 +490,36 @@ body { -khtml-user-select: text; -webkit-user-select: text; -moz-user-select: te
 #body a.create_app { margin: 0; display: block; position: absolute; right: 21px;}
 #body .app_menu_left { min-width: 130px; width: 130px;}
 #body .app_menu_left .setting li.selected { padding-left: 12px;}
+.upload_file_btn{
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 16px;
+    display: inline-block;
+    border: 1px solid #ddd;
+    text-shadow: none;
+    box-shadow: none;
+    text-align: center;
+    font-weight: 400;
+    padding: 4px 22px;
+    background: #ff8f32;
+    color: #fff;
+    flex-shrink: 0;
+}
+
+.select_file_name{
+height: 99%;
+width: 240px;
+box-shadow: inset 0 0 1px #000;
+display: flex;
+align-items: center;
+}
+.btn_no_drop{
+    background: #ccc!important;
+    cursor: no-drop!important;
+}
+.platform .box_line{
+    border:none!important;
+}
+.platform  .box_line input[type='text']{
+    width: 180px!important;
+}
