--- a/www/static/style/skin/metro/purple_app_setting.css
+++ b/www/static/style/skin/metro/purple_app_setting.css
@@ -442,6 +442,7 @@ body { -khtml-user-select: text; -webkit-user-select: text; -moz-user-select: te
 #body .main .section .box_line label input:focus { box-shadow: none;}
 #body .main .section .box_line i { padding-left: 5px; color: #777; line-height: 30px; font-size: 12px; font-style: normal;}
 #body .main .section .box_line a.button { width: 80px;}
+#body .main .section .box_line a.reboot { width: 80px; float: right;}
 #body .main .section table .title { font-size: 14px;}
 #body .main .section table .button { margin-left: 0px;}
 #body .main .section table .title span { border: none;}
@@ -466,6 +467,7 @@ body { -khtml-user-select: text; -webkit-user-select: text; -moz-user-select: te
 #body .save { width: auto;}
 #body .main .select table a.button { padding: 0 8px;}
 #body .main .group_editor .tag { height: 30px; line-height: 30px;}
+#body .main .file_editor .tag { height: 30px; line-height: 30px;}
 #body input[type="radio"] { width: auto; border: none;}
 #body .main .section .box_line label input[type="radio"] { width: auto; border: none; margin: 2px 1em;}
 #body .main .section .box_line label input[type="checkbox"] { width: auto; border: none; margin: 2px 1em;}
@@ -488,3 +490,46 @@ body { -khtml-user-select: text; -webkit-user-select: text; -moz-user-select: te
 #body a.create_app { margin: 0; display: block; position: absolute; right: 21px;}
 #body .app_menu_left { min-width: 130px; width: 130px;}
 #body .app_menu_left .setting li.selected { padding-left: 12px;}
+/* 5.6 */
+.upload_file_btn{
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 16px;
+    display: inline-block;
+    border: 1px solid #ddd;
+    text-shadow: none;
+    box-shadow: none;
+    text-align: center;
+    font-weight: 400;
+    padding: 4px 22px;
+    background: #8d3cc4;
+    color: #fff;
+    flex-shrink: 0;
+}
+
+.select_file_name{
+height: 99%;
+width: 240px;
+box-shadow: inset 0 0 1px #000;
+display: flex;
+align-items: center;
+}
+.btn_no_drop{
+    background: #ccc!important;
+    cursor: no-drop!important;
+}
+.platform .box_line{
+    border:none!important;
+    padding:1px!important;
+}
+.platform  .box_line input[type='text']{
+    width: 180px!important;
+    padding: 0px!important;
+    height: 26px!important;
+    line-height: 26px!important;
+    text-indent: 10px;
+}
+.platform .box_line span.infotitle{
+    height: 28px!important;
+    line-height: 28px!important;
+}
