--- a/www/static/style/skin/metro/secros_app_setting.css
+++ b/www/static/style/skin/metro/secros_app_setting.css
@@ -361,11 +361,11 @@ body { -khtml-user-select: text; -webkit-user-select: text; -moz-user-select: te
 #body input,#body input:focus { outline: none; box-shadow: none; border: 1px solid #bbb; padding: 8px;}
 #body input:focus { border-color: #75A1F0 !important; outline: none; box-shadow: 0 0 12px #75A1F0; -webkit-transition: all 0.218s; -moz-transition: all 0.218s; -o-transition: all 0.218s; -ms-transition: all 0.218s; transition: all 0.218s;}
 #body .font-icon { padding-right: 0.8em; display: inline-block;}
-#body .menu_left { min-width: 170px; position: fixed; z-index: 999; left: 0; height: 100%; width: 20%; background: #349fff;}
+#body .menu_left { min-width: 170px; position: fixed; z-index: 999; left: 0; height: 100%; width: 20%; background: linear-gradient(242deg, #0a56fa, #072745);}
 #body .menu_left h1 { color: #fff; font-weight: 400; padding: 15px 20px 20px 40px; font-size: 30px; margin: 0; font-family: 'Helvetica Neue', "Microsoft Yahei", "微软雅黑", "STXihei", "WenQuanYi Micro Hei", sans-serif;}
-#body .menu_left .setting li { line-height: 2.5em; color: #fff; font-size: 15px; box-sizing: border-box; text-indent: 10px; display: block; cursor: pointer; outline: none; -webkit-transition: padding 0.2s; -moz-transition: padding 0.2s; -o-transition: padding 0.2s; -ms-transition: padding 0.2s; transition: padding 0.2s; border-left: 4px solid #349fff;}
-#body .menu_left .setting li.hover { background: #67b7ff; border-left: 4px solid #67b7ff;}
-#body .menu_left .setting li.selected { background: #5db2ff; border-left: 4px solid #fff; padding-left: 20px;}
+#body .menu_left .setting li { line-height: 2.5em; color: #fff; font-size: 15px; box-sizing: border-box; text-indent: 10px; display: block; cursor: pointer; outline: none; -webkit-transition: padding 0.2s; -moz-transition: padding 0.2s; -o-transition: padding 0.2s; -ms-transition: padding 0.2s; transition: padding 0.2s;}
+#body .menu_left .setting li.hover { background: linear-gradient(89deg, #5db2ff, #04aded00); }
+#body .menu_left .setting li.selected { background: linear-gradient(89deg, #5db2ff, #04aded00);  padding-left: 20px;}
 #body .main { position: absolute; left: 20%; width: 80%; margin: 30px 0 0 20px; overflow-x: hidden;}
 #body .main .h1 .font-icon { padding-right: 16px;}
 #body .main div.h1 { font-weight: 400; color: #67b7ff; padding: 0px 0 10px 10px; font-size: 26px;}
