--- a/www/template/user/login.html
+++ b/www/template/user/login.html
@@ -21,54 +21,67 @@
 	<link rel="stylesheet" type="text/css" href="<?php echo STATIC_PATH;?>style/login.css">
 </head>
 <body>
-	<?php 
+	<?php
 		//$arr = array(4,5,7,7,7,10,11,12);
 		//-$get = $arr[mt_rand(0,count($arr)-1)];
 		$image = STATIC_PATH."images/wall_page/secros.jpg";
 		$loginimage = STATIC_PATH.'images/secros-login.png';
 		$oem  = config_get_value_from_file('/etc/system/oem.conf','OEM');
 		if (isset($oem)){
-			if($oem === 'kyht'){
+			if($oem === 'kyht' || $oem === 'nologo'){
 				echo '<div style="position: absolute; left: 0; top: 0; width: 100%; height: 100%; background: #255dfb;"></div>';
 			}
 			$image = STATIC_PATH."images/wall_page/".$oem.".jpg";
 			$loginimage = STATIC_PATH."images/".$oem."-login.png";
 		}
 		echo '<img class="background" src="'.$image.'" />';
+		$noc_status  = config_get_value_from_file('/var/run/roswan','noc_connected');
+		$tfa  = config_get_value_from_file('/mnt/config/usbpolicy.conf','tfa');
 	?>
 	<?php
-	if($oem === 'kyht'){
+	if($oem === 'kyht' || $oem === 'nologo'){
 		echo '<div class="loginbox" style="background: rgb(171,236,255,0.9);"><div class="title" style="justify-content: center;">';
-	}else{
+    }else{
 		echo '<div class="loginbox"><div class="title">';
 	}
 	?>
 			<?php
-			if($oem !== 'kyht'){
+			if($oem === 'kyht'){
+				echo '<div style="font-size: 32px; padding-top: 22px;">USB病毒隔离网关</div>';
+			}
+			else if($oem === 'nologo'){
+				echo '<div style="font-size: 32px; padding-top: 22px;">USB病毒隔离系统</div>';
+			}
+			else{
 				echo '<div class="logo"><img src="'.$loginimage.'" /></div>';
 				echo '<div class="info">——'.$L["secros_name_desc"].'</div>';
-			}else{
-				echo '<div style="font-size: 32px; padding-top: 22px;">USB病毒隔离网关</div>';
 			}
 			?>
 		</div>
 		<div class="form">
 			<div class="inputs">
-				<div><span><?php echo $L['username'];?>：</span><input id="username" name='name' type="text" placeholder="<?php echo $L['username'];?>" required/> </div> 
+				<div><span><?php echo $L['username'];?>：</span><input id="username" name='name' type="text" placeholder="<?php echo $L['username'];?>" required/> </div>
 				<div><span><?php echo $L['password'];?>：</span><input id="password" name='password' type="password" placeholder="<?php echo $L['password'];?>" required /></div>
-				
+
   <!--          	<?php if(isset($_SESSION['code_error_time']) && intval($_SESSION['code_error_time']) >=3){?>
 				<div class='check_code'>
 					<span><?php echo $L['login_code'];?>：</span>
 					<input name='check_code' class="check_code" type="text" placeholder="<?php echo $L['login_code'];?>" required /> <img src='./index.php?user/checkCode' onclick="this.src='./index.php?user/checkCode'" />
 					<div style="clear:both;"></div>
-				</div>				
+				</div>
 				<?php }?>-->
+				<?php if($noc_status == '1' && $tfa == '1'){?>
+					<div>
+						<span><?php echo $L['login_code'];?>：</span>
+						<input name='check_code' class="check_code" type="text" placeholder="<?php echo $L['login_code'];?>" required />
+						<div style="clear:both;"></div>
+					</div>
+				<?php }?>
 			</div>
 			<div class="actions">
 				<input type="submit" id="submit" value="<?php echo $L['login'];?>" />
 				<!--<input type="checkbox" class="checkbox" name="rember_password" id='rm' checked='checked' />
-				<label for='rm'><?php echo $L['login_rember_password'];?></label>	-->			
+				<label for='rm'><?php echo $L['login_rember_password'];?></label>	-->
 			</div>
 			<div class="msg"><?php echo $msg;?></div>
 			<div style="clear:both;"></div>
